add batch damaged
