# docs/swagger.json
@@ -289,7 +289,10 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.MobItemDamagedRequest"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/domain.MobItemDamagedRequest"
+                            }
                         }
                     }
                 ],
@@ -297,19 +300,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/domain.MobResponse"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/domain.MobItemDamagedRequest"
-                                        }
-                                    }
-                                }
-                            ]
+                            "$ref": "#/definitions/domain.MobResponse"
                         }
                     }
                 }
